# unicap

./: .env  .env.example  .gitignore  .gitmodules  .graphifyignore  CLAUDE.md  CMakeLists.txt  HANDOFF.md  README.md  USER.md  main.py  pyproject.toml
.claude/: settings.json
.scratch/bc-imitation/designs/: impact_20260507_bc-imitation.md
.scratch/ui/: err.txt  requirements.md  smoke_full.py  smoke_runner.py  smoke_window.py  test1.py  test2.py  test3.py  test_basic_subprocess.py
.tunan-workspace/: settings.md
.tunan-workspace/worktrees/: .gitignore
.wolf/: anatomy.md  cerebrum.md  identity.md  token-ledger.json
docs/: ff7remake-game-capture-research.md  methodology.md
docs/designs/: impact_20260502_auto-play.md  impact_20260504_replay-scene.md  impact_20260507_pyqt-ui.md  testplan_20260502_auto-play.md  testplan_20260504_replay-scene.md  testplan_20260507_pyqt-ui.md
docs/feedback/: replay-scene_session_20260504.md
docs/req/: auto-play.md  replay-scene.md  req.md
docs/synjuku/: synjuku_summary.md
graphify-out/: .graphify_chunk_01.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
murchFX/Shaders/: ChannelMixer.fx  DepthToAddon.fx  DoubleExposure.fx
profiles/: README.md  _default.yaml  batman_ak.yaml  cyberpunk.yaml  doom_eternal.yaml  ff7r.yaml
reshade/: ReShadeFX.vcxproj.filters
reshade-addons/99-frame_capture/: frame_capture.cpp
reshade/source/: dll_main.cpp  effect_codegen_spirv.cpp  imgui_function_table_18600.hpp  ini_file.cpp  runtime.cpp  runtime_gui.cpp  runtime_manager.cpp
reshade/source/d3d12/: d3d12_impl_command_list_immediate.hpp
reshade/source/opengl/: opengl_hooks.hpp
reshade/tools/: fxc.cpp
scripts/: build-exe.ps1  build.ps1  deploy.ps1  eval_bc.py  launch.ps1  setup.ps1  test_hotkeys.py  verify_auto_play.py  verify_replay.py
shaders/: ReShade.fxh
tools/: window_manager.py
tools/auto_play/: __init__.py  bc_driver.py  driver.py  hybrid_driver.py  input_backend.py  keep_alive.py  ocr_detector.py  profile.py  runner.py  takeover.py  vlm_driver.py  watchdog.py
tools/capture/: auto_capture.py  capture_all.py  config.py  file_watcher.py  pack_hdf5.py  record_inputs.py  survey.py
tools/replay/: __init__.py  player.py  recorder.py  schema.py  sync_match.py
tools/train/: __init__.py  bc_common.py  bc_dataset.py  bc_model.py  bc_train.py
unicap_gui/: __init__.py  __main__.py  app.py
unicap_gui/shared/: cli_schema.py  log_tailer.py  paths.py  process.py  sendinput.py  settings.py
unicap_gui/tabs/: base_tab.py  launch_tab.py  pack_tab.py  train_tab.py  video_tab.py
unicap_gui/widgets/: auto_play_panel.py  cli_preview.py  dashboard.py  flag_form.py  log_pane.py  model_list.py  session_tree.py
