[project]
name = "unicap"
version = "1.0.7"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python",
    "h5py",
    "numpy",
    "pyyaml",
]

[project.optional-dependencies]
gui = [
    # PySide6 = Qt for Python (LGPL). PyQt6 is GPL — PySide6 is friendlier
    # for an OSS repo that may grow profile/plugins outside GPL.
    "PySide6>=6.6",
]
auto-play = [
    "vgamepad",  # ViGEm Bus driver wrapper; soft-import in InputBackend
]
auto-play-ocr = [
    # Windows.Media.Ocr via winrt — used by watchdog C arm to detect
    # on-screen "M Back" / "ESC Close" / "<KEY> Skip" dismiss prompts and
    # inject the matched key directly. Free, system-bundled OCR (no extra
    # models / downloads), supports en + zh + ja out of the box on Windows 10+.
    # Per-namespace winrt packages are mandatory (the legacy umbrella
    # `winrt` package is deprecated since 2024).
    "winrt-runtime",
    "winrt-Windows.Foundation",
    "winrt-Windows.Graphics.Imaging",
    "winrt-Windows.Media.Ocr",
    "winrt-Windows.Storage.Streams",
]

[project.scripts]
unicap-gui = "unicap_gui.__main__:main"

[dependency-groups]
dev = [
    "nuitka>=4.0.8",
]
