[project]
name = "unicap"
version = "1.0.8"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python",
    "h5py",
    "numpy",
    "pyyaml",
    # CPU ONNX inference for BCDriver. ~50MB; acceptable runtime cost — see
    # impact_20260507_bc-imitation.md R1. GPU users opt into onnxruntime-gpu
    # via the [bc-runtime-gpu] extra (not yet implemented; CPU is the default).
    "onnxruntime>=1.18",
]

[project.optional-dependencies]
gui = [
    # PySide6 = Qt for Python (LGPL). PyQt6 is GPL — PySide6 is friendlier
    # for an OSS repo that may grow profile/plugins outside GPL.
    "PySide6>=6.6",
]
auto-play = [
    "vgamepad",  # ViGEm Bus driver wrapper; soft-import in InputBackend
]
train = [
    # BC imitation training pipeline (offline only — runtime/inference uses
    # onnxruntime, never torch). Big deps; isolated under [train] extra so
    # standalone exe build doesn't pull them in.
    "torch>=2.2",
    "torchvision>=0.17",
    "onnx>=1.16",
    # torch.onnx.export 在 2.10+ 走 dynamo 路径需要 onnxscript
    "onnxscript>=0.1",
    "tqdm>=4.66",
]
auto-play-ocr = [
    # Windows.Media.Ocr via winrt — used by watchdog C arm to detect
    # on-screen "M Back" / "ESC Close" / "<KEY> Skip" dismiss prompts and
    # inject the matched key directly. Free, system-bundled OCR (no extra
    # models / downloads), supports en + zh + ja out of the box on Windows 10+.
    # Per-namespace winrt packages are mandatory (the legacy umbrella
    # `winrt` package is deprecated since 2024).
    "winrt-runtime",
    "winrt-Windows.Foundation",
    "winrt-Windows.Graphics.Imaging",
    "winrt-Windows.Media.Ocr",
    "winrt-Windows.Storage.Streams",
]

[project.scripts]
unicap-gui = "unicap_gui.__main__:main"

[dependency-groups]
dev = [
    "nuitka>=4.0.8",
]
